feat: - added display for user in list - added test onclick functions for show purpose - moved html into template functions

--- a/html/contacts.html
+++ b/html/contacts.html
@@ -59,7 +59,7 @@
         </header>
         <main class="contact-main">
             <aside class="sidebar-contacts">
-                <div>
+                <div onclick="displayInList()">
                     <button class="button_add_task add-contact-btn">
                         <p>Add new contact</p>
                         <img src="../assets/icons/contacts/person_add.svg" alt="add_person icon">
@@ -67,132 +67,134 @@
                 </div>
                 <div class="contact-list">
                     <article class="single-letter-section">
-                        <h2 class="single-letter">A</h2>
+                        <h2 class="single-letter font-size-20">A</h2>
+                        <div class="seperator"></div>
+                        <section id="test" onclick="displayInMain()" class="list-user">
+                            
+                        </section>
+                    </article>
+                    <article class="single-letter-section">
+                        <h2 class="single-letter font-size-20">B</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">B</h2>
+                        <h2 class="single-letter font-size-20">C</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">C</h2>
+                        <h2 class="single-letter font-size-20">D</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">D</h2>
+                        <h2 class="single-letter font-size-20">E</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">E</h2>
+                        <h2 class="single-letter font-size-20">F</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">F</h2>
+                        <h2 class="single-letter font-size-20">G</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">G</h2>
+                        <h2 class="single-letter font-size-20">H</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">H</h2>
+                        <h2 class="single-letter font-size-20">I</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">I</h2>
+                        <h2 class="single-letter font-size-20">J</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">J</h2>
+                        <h2 class="single-letter font-size-20">K</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">K</h2>
+                        <h2 class="single-letter font-size-20">L</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">L</h2>
+                        <h2 class="single-letter font-size-20">M</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">M</h2>
+                        <h2 class="single-letter font-size-20">N</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">N</h2>
+                        <h2 class="single-letter font-size-20">O</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">O</h2>
+                        <h2 class="single-letter font-size-20">P</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">P</h2>
+                        <h2 class="single-letter font-size-20">Q</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">Q</h2>
+                        <h2 class="single-letter font-size-20">R</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">R</h2>
+                        <h2 class="single-letter font-size-20">S</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">S</h2>
+                        <h2 class="single-letter font-size-20">T</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">T</h2>
+                        <h2 class="single-letter font-size-20">U</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">U</h2>
+                        <h2 class="single-letter font-size-20">V</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">V</h2>
+                        <h2 class="single-letter font-size-20">W</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">W</h2>
+                        <h2 class="single-letter font-size-20">X</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">X</h2>
+                        <h2 class="single-letter font-size-20">Y</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
                     <article class="single-letter-section">
-                        <h2 class="single-letter">Y</h2>
-                        <div class="seperator"></div>
-                        <section></section>
-                    </article>
-                    <article class="single-letter-section">
-                        <h2 class="single-letter">Z</h2>
+                        <h2 class="single-letter font-size-20">Z</h2>
                         <div class="seperator"></div>
                         <section></section>
                     </article>
@@ -205,13 +207,13 @@
                     <span class="contact-sub">Better with a team</span>
                 </div>
                 <article id="mainView" class="contact-main-view">
-                    
+
                 </article>
             </section>
         </main>
     </article>
-    <script src="scripts/contacts.js"></script>
-    <script src="scripts/contact_template.js"></script>
+    <script src="/scripts/contacts.js"></script>
+    <script src="/scripts/contact_template.js"></script>
 </body>
 
 </html>
