fixed typo in subtasks title

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -113,7 +113,7 @@
                             <p id="required_category" class="required-info">This field is required</p>
                         </form>
                         <form class="input-form">
-                            <label for="task_subtask">Subtask</label>
+                            <label for="task_subtask">Subtasks</label>
                             <input id="task_subtask" class="task-input" type="text" placeholder="Add new subtask">
                         </form>
                     </section>
