fixed form issue and added category to require check

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -81,7 +81,7 @@
                     <section class="seperator"></section>
                     <section class="task-detail-container">
                         <form class="input-form">
-                            <label for="priority_section">Priority</label>
+                            <p for="priority_section">Priority</p>
                             <section class="priority-section" id="priority_section">
                                 <button class="priority-button" id="button_prio_urgent" onclick="changePriority('urgent')" type="button">
                                     <p>Urgent</p>
