fixed bug with drop down not detecting input

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -105,10 +105,10 @@
                         </form>
                         <form class="input-form">
                             <label for="task_category">Category<span class="required">*</span></label>
-                            <select class="select-input" name="" id="task_category">
+                            <select class="select-input" name="category" id="task_category">
                                 <option value="">Select task category</option>
-                                <option value="">Technical Task</option>
-                                <option value="">User Story</option>
+                                <option value="Technical Task">Technical Task</option>
+                                <option value="User Story">User Story</option>
                             </select>
                             <p id="required_category" class="required-info">This field is required</p>
                         </form>
