linked firebase.js

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -140,6 +140,7 @@
             </article>
         </main>
     </article>
+    <script src="../scripts/firebase.js"></script>
     <script src="../scripts/add_task.js"></script>
 </body>
 
