fixed page reloading when clicking on subtask buttons

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -117,11 +117,11 @@
                             <section class="subtask-section">
                                 <input onclick="showSubtaskButtons()" id="task_subtask" type="text" placeholder="Add new subtask">
                                 <aside id="subtask_button_section">
-                                    <button type="submit" onclick="addSubtask()">
+                                    <button type="button" onclick="addSubtask()">
                                         <img class="subtask-img filter-check" src="../assets/icons/contacts/check.svg" alt="add_icon">
                                     </button>
                                     <div class="subtask-seperator"></div>
-                                    <button type="reset" onclick="clearSubtask()">
+                                    <button type="button" onclick="clearSubtask()">
                                         <img class="subtask-img" src="../assets/icons/contacts/close.svg" alt="close_icon">
                                     </button>
                                 </aside>
