added and styled signup.html and signup.css + connected it with login.html

--- a/html/login.html
+++ b/html/login.html
@@ -20,7 +20,7 @@
 
         <div class="login-header">
             <p class="login-header-text">Not a Join user?</p>
-            <a href="#" class="signup-button">Sign up</a>
+            <a href="../html/signup.html" class="signup-button">Sign up</a>
         </div>
 
         <main class="login-card">
