--- a/html/add_task.html
+++ b/html/add_task.html
@@ -103,7 +103,7 @@
                         </form>
                         <form class="input-form">
                             <p>Assigned to</p>
-                            <button class="contact-button" type="button">
+                            <button class="contact-button" type="button" onclick="showContacts()">
                                 <p>Select contacts to assign</p>
                                 <img src="../assets/icons/addTask/dropdown.svg" alt="dropdown_icon">
                             </button>
