--- a/html/add_task.html
+++ b/html/add_task.html
@@ -108,8 +108,8 @@
                                 <img src="../assets/icons/addTask/dropdown.svg" alt="dropdown_icon">
                             </button>
                             <aside class="contact-selector" id="contact_selector">
-                                <ul>
-
+                                <ul id="task_assign">
+                                    
                                 </ul>
                             </aside>
                         </form>
