added small contact icons below section

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -107,10 +107,13 @@
                                 <p>Select contacts to assign</p>
                                 <img src="../assets/icons/addTask/dropdown.svg" alt="dropdown_icon">
                             </button>
-                            <aside class="contact-selector" id="contact_selector">
+                            <div class="contact-selector" id="contact_selector">
                                 <ul id="task_assign">
                                     
                                 </ul>
+                            </div>
+                            <aside id="rendered_contact_images" class="rendered-contacts">
+                                
                             </aside>
                         </form>
                         <form class="input-form">
