fixed some text elemtents having wrong font-size's

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -82,7 +82,7 @@
                     <section class="seperator"></section>
                     <section class="task-detail-container">
                         <form class="input-form">
-                            <p for="priority_section">Priority</p>
+                            <p for="priority_section" class="form-title">Priority</p>
                             <section class="priority-section" id="priority_section">
                                 <button class="priority-button" id="button_prio_urgent"
                                     onclick="changePriority('urgent')" type="button">
@@ -102,7 +102,7 @@
                             </section>
                         </form>
                         <form class="input-form">
-                            <p>Assigned to</p>
+                            <p class="form-title">Assigned to</p>
                             <button class="contact-button" type="button" onclick="showContacts()">
                                 <p>Select contacts to assign</p>
                                 <img src="../assets/icons/addTask/dropdown.svg" alt="dropdown_icon">
