"required" info now removed when inputs get clicked on or all inputs get cleared

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -65,7 +65,7 @@
                     <section class="task-detail-container">
                         <form class="input-form">
                             <label for="task_title">Title<span class="required">*</span></label>
-                            <input id="task_title" class="task-input" type="text" placeholder="Enter a title" required>
+                            <input id="task_title" class="task-input" type="text" placeholder="Enter a title" required onclick="removeIndicatorOnInput('title')">
                             <p id="required_title" class="required-info">This field is required</p>
                         </form>
                         <form class="input-form description">
@@ -75,7 +75,7 @@
                         </form>
                         <form class="input-form">
                             <label for="task_due_date">Due date<span class="required">*</span></label>
-                            <input id="task_due_date" class="task-input" type="date" placeholder="dd/mm/yyyy" required>
+                            <input id="task_due_date" class="task-input" type="date" placeholder="dd/mm/yyyy" required onclick="removeIndicatorOnInput('due_date')">
                             <p id="required_date" class="required-info">This field is required</p>
                         </form>
                     </section>
@@ -118,7 +118,7 @@
                         </form>
                         <form class="input-form">
                             <label for="task_category">Category<span class="required">*</span></label>
-                            <select class="select-input" name="category" id="task_category" required>
+                            <select class="select-input" name="category" id="task_category" required onclick="removeIndicatorOnInput('category')">
                                 <option value="">Select task category</option>
                                 <option value="Technical Task">Technical Task</option>
                                 <option value="User Story">User Story</option>
