background now not limited

--- a/html/add_task.html
+++ b/html/add_task.html
@@ -42,7 +42,7 @@
             <a href="./legalNotice.html">Legal notice</a>
         </footer>
     </aside>
-    <article>
+    <article class="article-bg">
         <header class="header">
             <nav class="header-nav">
                 <p>Kanban Project Management Tool</p>
