connected login.page

--- a/html/signup.html
+++ b/html/signup.html
@@ -20,7 +20,7 @@
 
         <div class="login-header">
             <p class="login-header-text">Already a Join user?</p>
-            <a href="../pages/login.html" class="signup-button">Log in</a>
+            <a href="../html/login.html" class="signup-button">Log in</a>
         </div>
 
         <main class="login-card">
