--- a/html/board.html
+++ b/html/board.html
@@ -69,7 +69,7 @@
                             <img src="../assets/icons/board/search_glas.svg" alt="">
                         </button>
                     </div>
-                    <button class="button_add_task" onclick="openAddTaskOverlay()">
+                    <button class="button_add_task">
                         <p>Add task</p>
                         <img src="../assets/icons/board/add_white.svg" alt="add_task icon">
                     </button>
@@ -110,9 +110,6 @@
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
     <script src="../scripts/board_overlay.js"></script>
-    <script src="../scripts/add_task.js"></script>
-    <script src="../scripts/add_task_templates.js"></script>
-    <script src="../scripts/firebase.js"></script>
 </body>
 
 
