--- a/html/board.html
+++ b/html/board.html
@@ -109,6 +109,7 @@
 
     <script src="../scripts/board_templates.js"></script>
     <script src="../scripts/board.js"></script>
+    <script src="../scripts/board_overlay.js"></script>
 </body>
 
 
