--- a/html/board.html
+++ b/html/board.html
@@ -69,7 +69,7 @@
                             <img src="../assets/icons/board/search_glas.svg" alt="">
                         </button>
                     </div>
-                    <button class="button_add_task">
+                    <button class="button_add_task" onclick="openAddTaskOverlay()">
                         <p>Add task</p>
                         <img src="../assets/icons/board/add_white.svg" alt="add_task icon">
                     </button>
